--- a/index.html
+++ b/index.html
@@ -9,22 +9,21 @@
 
 <body class="text">
 
-<p class="text">
-  <header class="text">
+<p>
+  <header>
     <h1>header</h1>
   </header>
 
-<div class="clearfix">
 
-  <nav class="text">
-<a href="nav">
-  </nav>
+  <nav><p>nav</p></nav>
 
-  <section class="text">
+  <section>
   </section>
-
-  <footer class="text">
-    <f1>footer</f1
+  <aside>
+      <p>aside</p>
+      </aside>
+  <footer>
+    <f1>footer</f1>
    </footer>
 
 
