--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 <body>
 
-<p>
   <header>
     <h1>header</h1>
   </header>
@@ -17,16 +16,16 @@
 
   <nav><p>nav</p></nav>
 
-  <section>
+  <section><p>section<p>
   </section>
+
   <aside>
       <p>aside</p>
       </aside>
+      
   <footer>
     <f1>footer</f1>
    </footer>
 
-
-</p>
     </body>
 </html>
