--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
 <body>
 
   <header>
-    <h1>header</h1>
+    <p>header</p>
   </header>
 
 
-  <nav><p>nav</p></nav>
+  <nav><p>nav</p>
+  </nav>
 
   <section><p>section<p>
+    <article><p>article</p>
+    </article>
   </section>
-
   <aside>
       <p>aside</p>
       </aside>
-      
-  <footer>
-    <f1>footer</f1>
-   </footer>
+
+
+
+
+
+
 
     </body>
 </html>
