--- a/index.html
+++ b/index.html
@@ -10,20 +10,29 @@
 <body>
 
   <header>
-    <p>header</p>
+    <a>header</a>
   </header>
 
 
-  <nav><p>nav</p>
+  <nav>
+    <a>nav</a>
   </nav>
 
-  <section><p>section<p>
-    <article><p>article</p>
+  <aside class="clearfix">
+      <a>aside</a>
+  </aside>
+
+  <section>
+    <a>section</a>
+    <article>
+      <a>article</a>
+      <h1>
+        <a>h1,h2,h3</a>
+      </h1>
+    <p>p</p>
     </article>
   </section>
-  <aside>
-      <p>aside</p>
-      </aside>
+
 
 
 
