--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
       <h1>
         <a>h1,h2,h3</a>
       </h1>
-    <p>p</p>
+      <p>p
+        </p>
     </article>
+
+    <footer>
+        <a>footer</a>
+    </footer>
   </section>
 
 
