--- a/index.html
+++ b/index.html
@@ -9,40 +9,28 @@
 
 <body>
 
-  <header>
-    <a>header</a>
-  </header>
+  <header class="blue">header</header>
 
 
-  <nav>
-    <a>nav</a>
-  </nav>
+  <nav class="blue">nav</nav>
 
-  <aside class="clearfix">
-      <a>aside</a>
-  </aside>
 
-  <section>
+  <section class="blue">
     <a>section</a>
     <article>
       <a>article</a>
-      <h1>
-        <a>h1,h2,h3</a>
-      </h1>
-      <p>p
-        </p>
-    </article>
 
-    <footer>
-        <a>footer</a>
-    </footer>
+      <h1 class="blue">h1,h2,h3</h1>
+
+      <p class="blue">p</p>
+
+    </article>
   </section>
 
+  <aside class="clearfix blue">aside</aside>
 
 
-
-
-
+    <footer class="blue">footer</footer>
 
 
     </body>
