--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
 
-  <header class="blue">header</header>
+  <header class="blue red">header</header>
 
 
-  <nav class="blue">nav</nav>
+  <nav class="blue red">nav</nav>
 
 
   <section class="blue">
@@ -20,9 +20,9 @@
     <article>
       <a>article</a>
 
-      <h1 class="blue">h1,h2,h3</h1>
+      <h1 class="blue green">h1,h2,h3</h1>
 
-      <p class="blue">p</p>
+      <p class="blue green">p</p>
 
     </article>
   </section>
@@ -30,7 +30,7 @@
   <aside class="clearfix blue">aside</aside>
 
 
-    <footer class="blue">footer</footer>
+    <footer class="blue red">footer</footer>
 
 
     </body>
