--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 
   <aside class="clearfix blue">aside</aside>
 
-
-    <footer class="blue red">footer</footer>
+  <footer class="blue red" id="ice">footer</footer>
 
 
     </body>
